--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<main>
 			<section class="container">
 				<h2 class="titulo__secundario">Meus Clientes</h2>
+				<label for = "filtrar-tabela">filtre: </label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do seu paciente">
 				<table>
 					<thead>
 						<tr>
@@ -103,5 +105,7 @@
 		
 		<script src="js/formulario.js"></script>
 		<script src="js/calcula-imc.js"></script>
+		<script src="js/remove-paciente.js"></script>
+		<script src="js/filtrar.js"></script>
 	</body>
 </html>
